jira/NMS-14548: Change to use getJsonObject as requested by fooker